some edit by classes

--- a/homework3/index.html
+++ b/homework3/index.html
@@ -9,108 +9,105 @@
 </head>
 <body>
     <table>
-        <tr>
-            <th class="red-stripes">Name</th>
-            <th class="red-stripes">Age</th>
-            <th class="red-stripes">Occupation</th>
-            <th class="red-stripes">Location</th>    
+        <tr class="red-stripes">
+            <th>Name</th>
+            <th>Age</th>
+            <th>Occupation</th>
+            <th>Location</th>    
         </tr>
-        <tr>
-            <td class="white-stripes">Luke Peters</td>
-            <td class="white-stripes">25</td>
-            <td class="white-stripes">Freelance Web Developer</td>
-            <td class="white-stripes">Brookline, MA</td>
+        <tr class="white-stripes">
+            <td>Luke Peters</td>
+            <td>25</td>
+            <td>Freelance Web Developer</td>
+            <td>Brookline, MA</td>
         </tr>
-        <tr>
-            <td class="grey-stripes">Joseph Smith</td>
-            <td class="grey-stripes">27</td>
-            <td class="grey-stripes">Project Manager</td>
-            <td class="grey-stripes">Somerville, MA</td>
+        <tr class="grey-stripes">
+            <td>Joseph Smith</td>
+            <td>27</td>
+            <td>Project Manager</td>
+            <td>Somerville, MA</td>
         </tr>
-        <tr>
-            <td class="white-stripes">Maxwell Johnson</td>
-            <td class="white-stripes">26</td>
-            <td class="white-stripes">UX Architect & Designer</td>
-            <td class="white-stripes">Arlington, MA</td>
+        <tr class="white-stripes">
+            <td>Maxwell Johnson</td>
+            <td>26</td>
+            <td>UX Architect & Designer</td>
+            <td>Arlington, MA</td>
         </tr>
-        <tr>
-            <td class="grey-stripes">Harry Harrison</td>
-            <td class="grey-stripes">25</td>
-            <td class="grey-stripes">Front-End Developer</td>
-            <td class="grey-stripes">Boston, MA</td>
+        <tr class="grey-stripes">
+            <td>Harry Harrison</td>
+            <td>25</td>
+            <td>Front-End Developer</td>
+            <td>Boston, MA</td>
         </tr>
     </table>
-    <br>
     <table>
-        <tr>
-            <th class="green-stripes">Product</th>
-            <th class="green-stripes">Unit Price</th>
-            <th class="green-stripes">Quantity</th>
-            <th class="green-stripes">Date Sold</th>    
-            <th class="green-stripes">Status</th>
+        <tr class="green-stripes">
+            <th>Product</th>
+            <th>Unit Price</th>
+            <th>Quantity</th>
+            <th>Date Sold</th>    
+            <th>Status</th>
         </tr>
-        <tr>
-            <td class="white-stripes">Solid oak work table</td>
-            <td class="white-stripes">$800</td>
-            <td class="white-stripes">10</td>
-            <td class="white-stripes">03/15/2014</td>
-            <td class="white-stripes">Waiting for Pickup</td>
+        <tr class="white-stripes">
+            <td>Solid oak work table</td>
+            <td>$800</td>
+            <td>10</td>
+            <td>03/15/2014</td>
+            <td>Waiting for Pickup</td>
         </tr>
-        <tr>
-            <td class="grey-stripes">Leather iPhone wallet</td>
-            <td class="grey-stripes">$45</td>
-            <td class="grey-stripes">120</td>
-            <td class="grey-stripes">02/28/2014</td>
-            <td class="grey-stripes">In Transit</td>
+        <tr class="grey-stripes">
+            <td>Leather iPhone wallet</td>
+            <td>$45</td>
+            <td>120</td>
+            <td>02/28/2014</td>
+            <td>In Transit</td>
         </tr>
-        <tr>
-            <td class="white-stripes">27" Apple Thunderbolt displays</td>
-            <td class="white-stripes">$1000</td>
-            <td class="white-stripes">25</td>
-            <td class="white-stripes">02/10/2014</td>
-            <td class="white-stripes">Delivered</td>
+        <tr class="white-stripes">
+            <td>27" Apple Thunderbolt displays</td>
+            <td>$1000</td>
+            <td>25</td>
+            <td>02/10/2014</td>
+            <td>Delivered</td>
         </tr>
-        <tr>
-            <td class="grey-stripes">Bose studio headphones</td>
-            <td class="grey-stripes">$60</td>
-            <td class="grey-stripes">90</td>
-            <td class="grey-stripes">01/14/2014</td>
-            <td class="grey-stripes">Delivered</td>
+        <tr class="grey-stripes">
+            <td>Bose studio headphones</td>
+            <td>$60</td>
+            <td>90</td>
+            <td>01/14/2014</td>
+            <td>Delivered</td>
         </tr>
     </table>
-    <br>
     <table>
-        <tr>
-            <th class="blue-stripes">Usename</th>
-            <th class="blue-stripes">Email</th>
-            <th class="blue-stripes">Password</th>
-            <th class="blue-stripes">Active</th>    
+        <tr class="blue-stripes">
+            <th>Usename</th>
+            <th>Email</th>
+            <th>Password</th>
+            <th>Active</th>    
         </tr>
-        <tr>
-            <td class="white-stripes">ninjalug</td>
-            <td class="white-stripes">misterninja@hotmail</td>
-            <td class="white-stripes">************</td>
-            <td class="white-stripes">Yes</td>
+        <tr class="white-stripes">
+            <td>ninjalug</td>
+            <td >misterninja@hotmail</td>
+            <td >************</td>
+            <td >Yes</td>
         </tr>
-        <tr>
-            <td class="grey-stripes">Joseph Smith</td>
-            <td class="grey-stripes">joseph.smith@gmail.com</td>
-            <td class="grey-stripes">************</td>
-            <td class="grey-stripes">No</td>
+        <tr class="grey-stripes">
+            <td>Joseph Smith</td>
+            <td>joseph.smith@gmail.com</td>
+            <td>************</td>
+            <td>No</td>
         </tr>
-        <tr>
-            <td class="white-stripes">1337hax0r15</td>
-            <td class="white-stripes">hackerdude1000@aol.com</td>
-            <td class="white-stripes">************</td>
-            <td class="white-stripes">Yes</td>
+        <tr class="white-stripes">
+            <td>1337hax0r15</td>
+            <td >hackerdude1000@aol.com</td>
+            <td >************</td>
+            <td >Yes</td>
         </tr>
-        <tr>
-            <td class="grey-stripes">heiryharry19</td>
-            <td class="grey-stripes">harryharry@gmail.com</td>
-            <td class="grey-stripes">************</td>
-            <td class="grey-stripes">No</td>
+        <tr class="grey-stripes">
+            <td>heiryharry19</td>
+            <td>harryharry@gmail.com</td>
+            <td>************</td>
+            <td>No</td>
         </tr>
     </table>
-    <br>
 </body>
 </html>
