edit some classes and styles

--- a/homework5/index.html
+++ b/homework5/index.html
@@ -8,98 +8,199 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="main">
-        <div class="main-text">
-            <H1>My Sacret Color Stash</H1>
-        </div>
-        <div class="block-colors">
+    <div class="header">
+        <H1>My Sacret Color Stash</H1>
+    </div>
+    <div class="main ">
+        <div class="block-colors clearfix">
             <div class="block-colors_inside">
-                <div class="box-inside grapefruit-light"></div>
-                <div class="box-inside grapefruit-hard"></div>
-                <div><p>GRAPEFRUIT</p></div>
+                <div class="box clearfix">
+                    <div class="box-inside grapefruit-light brdr-t-l"></div>
+                    <div class="box-inside grapefruit-hard brdr-t-r"></div>
+                </div>
+                <div class="bot clearfix">
+                    <div class="box-bot">GRAPEFRUIT</div>
+                    <div class="box-inside-left">#ED5565</div>
+                    <div class="box-inside-left">#DA4453</div>
+                </div>
             </div>
             <div class="block-colors_inside">
-                <div class="box-inside flower-light"></div>
-                <div class="box-inside flower-hard"></div>
-                <div><p>FLOWER</p></p></div></div>
+                <div class="box clearfix">
+                    <div class="box-inside flower-light brdr-t-l"></div>
+                    <div class="box-inside flower-hard brdr-t-r"></div>
+                </div>
+                <div class="bot clearfix">
+                    <div class="box-bot">FLOWER</div>
+                    <div class="box-inside-left">#FFE784</div>
+                    <div class="box-inside-left">#E6D077</div>
+                </div>
             </div>
             <div class="block-colors_inside">
-                <div class="box-inside purple-light"></div>
-                <div class="box-inside purple-hard"></div>
-                <div><p>PURPLE</p></div>
+                <div class="box clearfix">
+                    <div class="box-inside purple-light brdr-t-l"></div>
+                    <div class="box-inside purple-hard brdr-t-r"></div>
+                </div>
+                <div class="bot clearfix">
+                    <div class="box-bot">PURPLE</div>
+                    <div class="box-inside-left">#8484FF</div>
+                    <div class="box-inside-left">#7777E6</div>
+                </div>
             </div>
             <div class="block-colors_inside">
-                <div class="box-inside grass-light"></div>
-                <div class="box-inside grass-hard"></div>
-                <div><p>GRASS</p></div>
+                <div class="box clearfix">
+                    <div class="box-inside grass-light brdr-t-l"></div>
+                    <div class="box-inside grass-hard brdr-t-r"></div>
+                </div>
+                <div class="bot clearfix">
+                    <div class="box-bot">GRASS</div>
+                    <div class="box-inside-left">#A0D468</div>
+                    <div class="box-inside-left">#8CC152</div>
+                </div>
             </div>
             <div class="block-colors_inside">
-                <div class="box-inside infrared-light"></div>
-                <div class="box-inside infrared-hard"></div>
-                <div><p>INFRARED</p></div>
+                <div class="box clearfix">
+                    <div class="box-inside infrared-light brdr-t-l"></div>
+                    <div class="box-inside infrared-hard brdr-t-r"></div>
+                </div>
+                <div class="bot clearfix">
+                    <div class="box-bot">INFRARED</div>
+                    <div class="box-inside-left">#ED5565</div>
+                    <div class="box-inside-left">#DA4453</div>
+                </div>
             </div>
             <div class="block-colors_inside">
-                <div class="box-inside bluesteel-light"></div>
-                <div class="box-inside bluesteel-hard"></div>
-                <div><p>BLUESTEEL</p></div>
+                <div class="box clearfix">
+                    <div class="box-inside bluesteel-light brdr-t-l"></div>
+                    <div class="box-inside bluesteel-hard brdr-t-r"></div>
+                </div>
+                <div class="bot clearfix">
+                    <div class="box-bot">BLUESTEEL</div>
+                    <div class="box-inside-left">#ED5565</div>
+                    <div class="box-inside-left">#DA4453</div>
+                </div>
+            </div>    
+            <div class="block-colors_inside">
+                <div class="box clearfix">
+                    <div class="box-inside forest-light brdr-t-l"></div>
+                    <div class="box-inside forest-hard brdr-t-r"></div>
+                </div>
+                <div class="bot clearfix">
+                    <div class="box-bot">FOREST</div>
+                    <div class="box-inside-left">#ED5565</div>
+                    <div class="box-inside-left">#DA4453</div>
+                </div>      
             </div>
             <div class="block-colors_inside">
-                <div class="box-inside forest-light"></div>
-                <div class="box-inside forest-hard"></div>
-                <div><p>FOREST</p></div>
+                <div class="box clearfix">
+                    <div class="box-inside ghost-light brdr-t-l"></div>
+                    <div class="box-inside ghost-hard brdr-t-r"></div>
+                </div>
+                <div class="bot clearfix">
+                    <div class="box-bot">GHOST</div>
+                    <div class="box-inside-left">#ED5565</div>
+                    <div class="box-inside-left">#DA4453</div>
+                </div>   
             </div>
             <div class="block-colors_inside">
-                <div class="box-inside ghost-light"></div>
-                <div class="box-inside ghost-hard"></div>
-                <div><p>GHOST</p></div>
+                <div class="box clearfix">
+                    <div class="box-inside sun-light brdr-t-l"></div>
+                    <div class="box-inside sun-hard brdr-t-r"></div>
+                </div>
+                <div class="bot clearfix">
+                    <div class="box-bot">SUN</div>
+                    <div class="box-inside-left">#ED5565</div>
+                    <div class="box-inside-left">#DA4453</div>
+                </div>  
             </div>
             <div class="block-colors_inside">
-                <div class="box-inside sun-light"></div>
-                <div class="box-inside sun-hard"></div>
-                <div><p>SUN</p></div>
+                <div class="box clearfix">
+                    <div class="box-inside twitter-light brdr-t-l"></div>
+                    <div class="box-inside twitter-hard brdr-t-r"></div>
+                </div>
+                <div class="bot clearfix">
+                    <div class="box-bot">TWITTER</div>
+                    <div class="box-inside-left">#ED5565</div>
+                    <div class="box-inside-left">#DA4453</div>
+                </div> 
             </div>
             <div class="block-colors_inside">
-                <div class="box-inside twitter-light"></div>
-                <div class="box-inside twitter-hard"></div>
-                <div><p>TWITTER</p></div>
+                <div class="box clearfix">
+                    <div class="box-inside facebook-light brdr-t-l"></div>
+                    <div class="box-inside facebook-hard brdr-t-r"></div>
+                </div>
+                <div class="bot clearfix">
+                    <div class="box-bot">FACEBOOK</div>
+                    <div class="box-inside-left">#ED5565</div>
+                    <div class="box-inside-left">#DA4453</div>
+                </div> 
             </div>
             <div class="block-colors_inside">
-                <div class="box-inside facebook-light"></div>
-                <div class="box-inside facebook-hard"></div>
-                <div><p>FACEBOOK</p></div>
+                <div class="box clearfix">
+                    <div class="box-inside cave-light brdr-t-l"></div>
+                    <div class="box-inside cave-hard brdr-t-r"></div>
+                </div>
+                <div class="bot clearfix">
+                    <div class="box-bot">CAVE</div>
+                    <div class="box-inside-left">#ED5565</div>
+                    <div class="box-inside-left">#DA4453</div>
+                </div>
             </div>
             <div class="block-colors_inside">
-                <div class="box-inside cave-light"></div>
-                <div class="box-inside cave-hard"></div>
-                <div><p>CAVE</p></div>
+                <div class="box clearfix">
+                    <div class="box-inside lake-light brdr-t-l"></div>
+                    <div class="box-inside lake-hard brdr-t-r"></div>
+                </div>
+                <div class="bot clearfix">
+                    <div class="box-bot">LAKE</div>
+                    <div class="box-inside-left">#ED5565</div>
+                    <div class="box-inside-left">#DA4453</div>
+                </div>
             </div>
             <div class="block-colors_inside">
-                <div class="box-inside lake-light"></div>
-                <div class="box-inside lake-hard"></div>
-                <div><p>LAKE</p></div>
+                <div class="box clearfix">
+                    <div class="box-inside gum-light brdr-t-l"></div>
+                    <div class="box-inside gum-hard brdr-t-r"></div>
+                </div>
+                <div class="bot clearfix">
+                    <div class="box-bot">GUM</div>
+                    <div class="box-inside-left">#ED5565</div>
+                    <div class="box-inside-left">#DA4453</div>
+                </div>
             </div>
             <div class="block-colors_inside">
-                <div class="box-inside gum-light"></div>
-                <div class="box-inside gum-hard"></div>
-                <div><p>GUM</p></div>
+                <div class="box clearfix">
+                    <div class="box-inside gold-light brdr-t-l"></div>
+                    <div class="box-inside gold-hard brdr-t-r"></div>
+                </div>
+                <div class="bot clearfix">
+                    <div class="box-bot">GOLD</div>
+                    <div class="box-inside-left">#ED5565</div>
+                    <div class="box-inside-left">#DA4453</div>
+                </div>
             </div>
             <div class="block-colors_inside">
-                <div class="box-inside gold-light"></div>
-                <div class="box-inside gold-hard"></div>
-                <div><p>GOLD</p></div>
+                <div class="box clearfix">
+                    <div class="box-inside ocean-light brdr-t-l"></div>
+                    <div class="box-inside ocean-hard brdr-t-r"></div>
+                </div>
+                <div class="bot clearfix">
+                    <div class="box-bot">OCEAN</div>
+                    <div class="box-inside-left">#ED5565</div>
+                    <div class="box-inside-left">#DA4453</div>
+                </div>
             </div>
             <div class="block-colors_inside">
-                <div class="box-inside ocean-light"></div>
-                <div class="box-inside ocean-hard"></div>
-                <div><p>OCEAN</p></div>
-            </div>
-            <div class="block-colors_inside">
-                <div class="box-inside mango-light"></div>
-                <div class="box-inside mango-hard"></div>
-                <div><p>MANGO</p></div>
+                <div class="box clearfix">
+                    <div class="box-inside mango-light brdr-t-l"></div>
+                    <div class="box-inside mango-hard brdr-t-r"></div>
+                </div>
+                <div class="bot clearfix">
+                    <div class="box-bot">MANGO</div>
+                    <div class="box-inside-left">#ED5565</div>
+                    <div class="box-inside-left">#DA4453</div>
+                </div>
             </div>
         </div>
     </div>
-    
 </body>
 </html>
