--- a/homework6/index.html
+++ b/homework6/index.html
@@ -1,57 +1,92 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="main">
-        <div class="header">
-            <div class="header-nav">
-                <div class="header-nav-img"></div>
-                <div class="header-nav-menu">
-                    <ul><!-- 
-                     --><li><a href="#">Homepage</a></li><!-- 
-                     --><li><a href="#">Services</a></li><!-- 
-                     --><li><a href="#">Portfolio</a></li><!-- 
-                     --><li><a href="#">Pricing</a></li><!-- 
-                     --><li><a href="#">Contact</a></li><!-- 
-                 --></ul><!-- 
-             --></div>
-                <div class="clear"></div>
-            </div>
-            <div class="header-text">
-                <h1>Smart Fixed Navigation</h1>
-            </div>    
-        </div>    
-        <div class="content">
-            <div class="content-img"></div>
-            <div class="content-img"></div>
-            <div class="content-img"></div>
-            <div class="content-img"></div>
-            <div class="content-img"></div>
-            <div class="content-img"></div>
-            <div class="content-img"></div>
-            <div class="content-img"></div>
-            <div class="content-img"></div>
-            <div class="content-img"></div>
-            <div class="content-img"></div>
-            <div class="content-img"></div>
-            <div class="clear"></div>
-            <div class="fixed-menu">
-               <ul><!-- 
-               --><li><a href="#">Homepage</a></li><!-- 
-               --><li><a href="#">Services</a></li><!-- 
-               --><li><a href="#">Portfolio</a></li><!-- 
-               --><li><a href="#">Pricing</a></li><!-- 
-               --><li><a href="#">Contact</a></li><!-- 
-            --></ul><!--    
-         --></div>
-        </div>
-    </div>
-</body>
-</html>
+@font-face {
+    font-family: 'open_sansregular';
+    src: url('fonts/opensans-400-normal-webfont.woff2') format('woff2'),
+         url('fonts/opensans-400-normal-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+*,
+*:before,
+*:after {
+    box-sizing: border-box;
+}
+body {
+    font-family: 'Roboto', 'open_sansregular', sans-serif;
+    padding: 0;
+    margin: 0;
+}
+header {
+    width: 100%;
+}
+.header-nav {
+    width: 100%;
+}
+.menu ul {
+    list-style: none;
+    margin-left: -40px;
+}
+.menu a {
+    text-decoration: none;
+    color: #e84a64;
+    cursor: pointer;
+    font-size: 16px;    
+}
+.header-nav-img {
+    background-image: url(header-img.jpg);
+    width: 55px;
+    height: 55px;
+    margin-left: 5%;
+    float: left;
+}
+.header-nav-menu {
+    float: right;
+    padding-bottom: 50px; 
+}
+.header-nav-menu li {
+    display: inline-block;
+}
+.header-nav-menu a {
+    padding: 10px 30px;
+}
+.clearfix {
+    content: '';
+    display: table;
+    clear: both;
+}
+.header-text h1 {
+    padding: 50px 0px;
+    font-size: 40px;
+    font-weight: 100;
+    text-align: center;
+}
+.content {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(44, 44, 53, 0.658);
+    position: relative;
+    padding-right: 5%;
+    padding-top: 5%
+
+}
+.content-img {
+    width: 28.3%;
+    height: 400px;
+    float: left;
+    margin-left: 5%;
+    margin-bottom: 5%;
+    background-image: url(content-img.jpg);
+}
+.fixed-menu {
+    width: 20%;
+    height: 270px;
+    margin-right: 5.1%;
+    line-height: 40px;
+    background-color: #eff2f6;
+    position: fixed;
+    bottom: 0;
+    right: 0;    
+}
+.fixed-menu a {
+    display: block;
+    padding: 1% 3%;  
+}
