--- a/homework12/index.html
+++ b/homework12/index.html
@@ -12,14 +12,14 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top p-3">
+    <div class="navbar navbar-expand-lg navbar-dark fixed-top p-3">
         <div class="container">
             <a class="navbar-brand" href="">START BOOTSTRAP</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" 
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="navbar-collapse collapse" id="navbarResponsive">
+            <nav class="navbar-collapse collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="#">SIGN UP</a>
@@ -28,9 +28,9 @@
                         <a class="nav-link" href="#">LOG IN</a>
                     </li>
                 </ul>
-            </div>
+            </nav>
         </div>
-    </nav>
+    </div>
     <header class="text-center text-white main">
         <div class="main-content">
             <div class="container">
